# lemmy

.github/workflows/: update-upstream-repo.yml
apps/whisperer/: .gitignore  CMakeLists.txt  README.md  build.sh
apps/whisperer/src/: Recorder.c  audio.h  audio.m  keylogger.c  main.c  main.m  test_transcription.c  transcription.cpp  transcription.h
